[package]
authors = ["equilibrium"]
edition = "2018"
name = "primitives"
version = "1.0.0"

[dependencies.impl-trait-for-tuples]
version = "0.1.3"

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
default-features = false
features = ["derive"]

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0.123"
default-features = false

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
]
