[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-oracle"
version = "1.0.0"

[dependencies.impl-trait-for-tuples]
version = "0.1.3"

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
default-features = false
features = ["derive"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.regex-automata]
version = "0.1"
default-features = false

[dependencies.serde]
version = "1.0.123"
default-features = false

[dependencies.serde_json]
git = "https://github.com/nikvolf/json"
default-features = false
features = ["alloc"]

[dependencies.scale-info]
version = "2.0.1"
default-features = false
features = ["derive"]

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.sp-arithmetic]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
package = "frame-system"
default-features = false

[dev-dependencies.pallet-timestamp]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false

[dependencies.frame-benchmarking]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"
default-features = false
optional = true

# Equilibrium dependencies

[dependencies.primitives]
path = "../../eq-primitives"

[dependencies.utils]
path = "../../eq-utils"

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
  "pallet-timestamp/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "serde/std",
  "serde_json/std",
]

runtime-benchmarks = ["frame-benchmarking"]
